nginx-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rp1-app
spec:
  selector:
    matchLabels:
      name: rp1-app
  template:
    metadata:
      labels:
        name: rp1-app
    spec:
      containers:
        - name: appclear
        
          image: themuntu/rp1-app:latest
          ports:
            - containerPort: 80
