nginx-app/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: rp1-app

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    name: rp1-app
