nginx-app/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rp1-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: rp1-app
