nginx-app/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-rp1

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: hello-rp1
